--- a/cs246.html
+++ b/cs246.html
@@ -153,7 +153,7 @@
                                 <li>Lecture  9 - Not Done Yet</li>
                                 <li>Lecture 10 - Not Done Yet</li>
                                 <li>Lecture 11 - Not Done Yet</li>
-                                <li>Lecture 12 - Not Done Yet</li>
+                                <li>Lecture 12 - Done</li>
                             </ul>
                         </div>
                     </div>
